# stirling

./: .bumpversion.cfg  LICENSE.txt  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: actions.yml
src/: k_subsets.py
src/stirling/: __init__.py  stirling.py
tests/: test_stirling.py
