[metadata]
name = stirling
version = attr: stirling.version.__version__
description = Set partitioning
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/rob-smallshire/stirling
author = Robert Smallshire
author_email: robert+stirling@smallshire.org.uk
keywords = sets partitioning
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:

[options.extras_require]
dev = bumpversion
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; coverage ; pytest-cov ; hypothesis; tox

[options.packages.find]
where = src
